--- a/Makefile.in
+++ b/Makefile.in
@@ -30,10 +30,8 @@ DESTDIR=@DESTDIR@
 ##########################################
 all: wi
 
-#wi: configure Makefile config.h main.nc 01init.o 02base.o 01init.nc 02base.nc 
-#	neo-c -o wi main.nc 01init.o 02base.o $(CFLAGS) $(LIBS)
-wi: configure Makefile config.h main.nc 01init.o 02base.o 03insert_mode.o 04word.o 05undo.o 06file.o 07yank.o 08visual.o 09search.o 10edit.o 11move.o 12command.o 13completion.o 14dot.o 15filer.o 16mark.o 17hvisual.o 18vvisual.o 01init.nc 02base.nc 03insert_mode.nc 04word.nc 05undo.nc 06file.nc 07yank.nc 08visual.nc 09search.nc 10edit.nc 11move.nc 12command.nc 13completion.nc 14dot.nc 15filer.nc 16mark.nc 17hvisual.nc 18vvisual.nc
-	neo-c -o wi main.nc 01init.o 02base.o 03insert_mode.o 04word.o 05undo.o 06file.o 07yank.o 08visual.o 09search.o 10edit.o 11move.o 12command.o 13completion.o 14dot.o 15filer.o 16mark.o 17hvisual.o 18vvisual.o $(CFLAGS) $(LIBS) $(NCFLAGS)
+wi: configure Makefile config.h main.nc 01init.o 02base.o 03insert_mode.o 04word.o 05undo.o 06file.o 06-2file.o 06-3file.o 07yank.o 08visual.o 09search.o 10edit.o 10edit-2.o 11move.o 12command.o 13completion.o 14dot.o 15filer.o 16mark.o 17hvisual.o 18vvisual.o 19rewrite_mode.o 01init.nc 02base.nc 03insert_mode.nc 04word.nc 05undo.nc 06file.nc 06-2file.o 06-3file.o 07yank.nc 08visual.nc 09search.nc 10edit.nc 11move.nc 12command.nc 13completion.nc 14dot.nc 15filer.nc 16mark.nc 17hvisual.nc 18vvisual.nc 19rewrite_mode.nc
+	neo-c -o wi main.nc 01init.o 02base.o 03insert_mode.o 04word.o 05undo.o 06file.o 06-2file.o 06-3file.o 07yank.o 08visual.o 09search.o 10edit.o 10edit-2.o 11move.o 12command.o 13completion.o 14dot.o 15filer.o 16mark.o 17hvisual.o 18vvisual.o 19rewrite_mode.o -L/opt/local/lib $(CFLAGS) $(LIBS) $(NCFLAGS) 
 
 01init.o: configure Makefile config.h 01init.nc common.h
 	neo-c -c 01init.nc $(CFLAGS) $(NCFLAGS)
@@ -51,10 +49,16 @@ wi: configure Makefile config.h main.nc 01init.o 02base.o 03insert_mode.o 04word
 	neo-c -c 05undo.nc $(CFLAGS) $(NCFLAGS)
 
 06file.o: configure config.h 01init.nc 02base.nc 03insert_mode.nc 04word.nc 05undo.nc 06file.nc
-	neo-c -c 06file.nc $(CFLAGS) $(NCFLAGS) || clang -c -o 06file.o 06file.ll
+	neo-c -c 06file.nc $(CFLAGS) $(NCFLAGS)
+
+06-2file.o: configure config.h 01init.nc 02base.nc 03insert_mode.nc 04word.nc 05undo.nc 06file.nc 06-2file.nc
+	neo-c -c 06-2file.nc $(CFLAGS) $(NCFLAGS)
+
+06-3file.o: configure config.h 01init.nc 02base.nc 03insert_mode.nc 04word.nc 05undo.nc 06file.nc 06-2file.nc 06-3file.nc
+	neo-c -c 06-3file.nc $(CFLAGS) $(NCFLAGS) || clang -c -o 06-3file.o 06-3file.ll
 
 07yank.o: configure config.h 01init.nc 02base.nc 03insert_mode.nc 04word.nc 05undo.nc 06file.nc 07yank.nc
-	neo-c -c 07yank.nc $(CFLAGS) $(NCFLAGS)
+	neo-c -c 07yank.nc $(CFLAGS) $(NCFLAGS) || clang -c -o 07yank.o 07yank.ll
 
 08visual.o: configure config.h 01init.nc 02base.nc 03insert_mode.nc 04word.nc 05undo.nc 06file.nc 07yank.nc 08visual.nc 
 	neo-c -c 08visual.nc $(CFLAGS) $(NCFLAGS)
@@ -65,7 +69,10 @@ wi: configure Makefile config.h main.nc 01init.o 02base.o 03insert_mode.o 04word
 10edit.o: configure config.h 01init.nc 02base.nc 03insert_mode.nc 04word.nc 05undo.nc 06file.nc 07yank.nc 08visual.nc 09search.nc 10edit.nc
 	neo-c -c 10edit.nc $(CFLAGS) $(NCFLAGS)
 
-11move.o: configure config.h 01init.nc 02base.nc 03insert_mode.nc 04word.nc 05undo.nc 06file.nc 07yank.nc 08visual.nc 09search.nc 10edit.nc 11move.nc
+10edit-2.o: configure config.h 01init.nc 02base.nc 03insert_mode.nc 04word.nc 05undo.nc 06file.nc 07yank.nc 08visual.nc 09search.nc 10edit.nc 10edit-2.nc
+	neo-c -c 10edit-2.nc $(CFLAGS) $(NCFLAGS)
+
+11move.o: configure config.h 01init.nc 02base.nc 03insert_mode.nc 04word.nc 05undo.nc 06file.nc 07yank.nc 08visual.nc 09search.nc 10edit.nc 10edit-2.nc 11move.nc
 	neo-c -c 11move.nc $(CFLAGS) $(NCFLAGS)
 
 12command.o: configure config.h 01init.nc 02base.nc 03insert_mode.nc 04word.nc 05undo.nc 06file.nc 07yank.nc 08visual.nc 09search.nc 10edit.nc 11move.nc 12command.nc
@@ -78,7 +85,7 @@ wi: configure Makefile config.h main.nc 01init.o 02base.o 03insert_mode.o 04word
 	neo-c -c 14dot.nc $(CFLAGS) $(NCFLAGS)
 
 15filer.o: configure config.h 01init.nc 02base.nc 03insert_mode.nc 04word.nc 05undo.nc 06file.nc 07yank.nc 08visual.nc 09search.nc 10edit.nc 11move.nc 12command.nc 13completion.nc 14dot.nc 15filer.nc
-	neo-c -c 15filer.nc $(CFLAGS) $(NCFLAGS)
+	neo-c -c 15filer.nc $(CFLAGS) $(NCFLAGS) || clang -c -o 15filer.o 15filer.ll
 
 16mark.o: configure config.h 01init.nc 02base.nc 03insert_mode.nc 04word.nc 05undo.nc 06file.nc 07yank.nc 08visual.nc 09search.nc 10edit.nc 11move.nc 12command.nc 13completion.nc 14dot.nc 15filer.nc 16mark.nc
 	neo-c -c 16mark.nc $(CFLAGS) $(NCFLAGS)
@@ -88,6 +95,9 @@ wi: configure Makefile config.h main.nc 01init.o 02base.o 03insert_mode.o 04word
 
 18vvisual.o: configure config.h 01init.nc 02base.nc 03insert_mode.nc 04word.nc 05undo.nc 06file.nc 07yank.nc 08visual.nc 09search.nc 10edit.nc 11move.nc 12command.nc 13completion.nc 14dot.nc 15filer.nc 16mark.nc 17hvisual.nc 18vvisual.nc
 	neo-c -c 18vvisual.nc $(CFLAGS) $(NCFLAGS)
+
+19rewrite_mode.o: configure config.h 01init.nc 02base.nc 03insert_mode.nc 04word.nc 05undo.nc 06file.nc 07yank.nc 08visual.nc 09search.nc 10edit.nc 11move.nc 12command.nc 13completion.nc 14dot.nc 15filer.nc 16mark.nc 17hvisual.nc 18vvisual.nc 19rewrite_mode.nc
+	neo-c -c 19rewrite_mode.nc $(CFLAGS) $(NCFLAGS)
 
 #########################################
 # install
