Revert "correspondi neo-c version 2.0.0"
This reverts commit 9b42bb22028738c0b209919f0d6f5e41c99c58d8.

--- a/Makefile.in
+++ b/Makefile.in
@@ -125,7 +125,7 @@ permission:
 # clean
 #########################################
 clean:
-	rm -fR memleak_debug.txt *.ll *.bc *.nc.tmp *.out *.o valgrind.txt memleack_debug.txt *.i
+	rm -fR memleak_debug.txt *.ll *.bc *.nc.tmp *.out *.o valgrind.txt memleack_debug.txt
 	rm -fR wi
 
 distclean: clean
